fixing alignment

--- a/style.css
+++ b/style.css
@@ -368,6 +368,7 @@ div[id^="box_1"][id$="_sub"] {
 }
 div[id^="box_1"]:not([id$="_sub"])::after {
   background: url(matrixcode2.gif);
+  filter: drop-shadow(0px 0px 3px white);
   color: transparent;
   background-clip: text;
   font-weight: 900;
@@ -409,7 +410,6 @@ div[id^="box_1"]:not([id$="_sub"])::after {
 }
 .dripContainer {
   transition: 1s;
-
   border-top: 1px solid var(--border);
   width: 100%;
   height: 100%;
@@ -430,6 +430,7 @@ div[id^="box_1"]:not([id$="_sub"])::after {
   mask-image: linear-gradient(to bottom, black, transparent);
 }
 .category {
+  background: red;
   border-top: 1px solid var(--border);
   font-size: 30px;
   color: white;
@@ -439,9 +440,8 @@ div[id^="box_1"]:not([id$="_sub"])::after {
   flex-direction: column;
   justify-content: center;
   transition: 1s;
-  height: 75%;
+  height: 100% !important;
   position: relative;
-  top: 10px;
   border-right: 1px solid transparent;
   border-left: 1px solid transparent;
   cursor: pointer;
@@ -485,8 +485,11 @@ div[id^="box_1"]:not([id$="_sub"])::after {
   transition: 1s;
 }
 .dripping {
-  height: 100%;
+  height: 75%;
   width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: blue;
 }
 .col-4 {
   padding: 0 !important;
@@ -513,7 +516,9 @@ div[id^="box_1"]:not([id$="_sub"])::after {
   border-right: 1px solid var(--border);
   border-left: 1px solid var(--border);
 }
-
+.secondPage .upperComponent {
+  height: 40%;
+}
 .category:hover .dripContainer {
   border-top: 0px solid transparent;
   transition: 1s;
